change ninja version setting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,12 @@ dependencies = [
 requires = [
     "nanobind>=1.8.0,<3.0.0",
     "scikit-build-core",
-    "ninja"
 ]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
-cmake.minimum-version = "3.18"
+cmake.version = ">=3.18"
+ninja.version = ">=1.11"
 sdist.exclude = [
     ".github",
     "bindings/c",
