python: add ninja build dependency (#1128)
* python: add ninja build dependency

* change ninja version setting

* CI: install ninja for SDist

* fix package name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ requires = [
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
-cmake.minimum-version = "3.18"
+cmake.version = ">=3.18"
+ninja.version = ">=1.11"
 sdist.exclude = [
     ".github",
     "bindings/c",
