--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -36,7 +36,11 @@ jobs:
     - name: Build SDist
       run: pipx run build --sdist
     - name: Confirm SDist can be built
-      run: pip wheel dist/*.tar.gz
+      run: |
+        # FIXME: why doesn't scikit_build_core automatically download ninja?
+        sudo apt-get update
+        sudo apt-get install ninja-build
+        pip wheel dist/*.tar.gz
     - uses: actions/upload-artifact@v4
       with:
         name: python-sdist
