--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -55,6 +55,7 @@ jobs:
       url: https://pypi.org/p/manifold3d
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+    if: ${{ github.event_name == 'release' }}
     steps:
     - uses: actions/download-artifact@v4
       with:
