--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -161,7 +161,7 @@ jobs:
         make
 
   build_fuzzer_mac:
-    name: fuzzer
+    name: fuzzer mac
     timeout-minutes: 30
     runs-on: macos-latest
     steps:
