--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ option(
   "Allow Manifold build to download missing dependencies"
   ON
 )
+option(MANIFOLD_IO "Enable basic OBJ reading and writing of Manifolds" OFF)
 option(MANIFOLD_EXPORT "Build mesh export (via assimp) utility library" OFF)
 option(MANIFOLD_PAR "Enable Parallel backend" OFF)
 option(
