--- a/cmake/manifoldConfig.cmake.in
+++ b/cmake/manifoldConfig.cmake.in
@@ -22,6 +22,7 @@ set(MANIFOLD_USE_BUILTIN_TBB "@MANIFOLD_USE_BUILTIN_TBB@")
 if(MANIFOLD_PAR STREQUAL "ON" AND NOT MANIFOLD_USE_BUILTIN_TBB)
   find_package(TBB REQUIRED)
 endif()
+set(MANIFOLD_IO "@MANIFOLD_IO@")
 set(MANIFOLD_EXPORT "@MANIFOLD_EXPORT@")
 if(MANIFOLD_EXPORT)
   find_package(assimp REQUIRED)
