--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -85,6 +85,7 @@ set(
   OPTIONS
   MANIFOLD_DEBUG
   MANIFOLD_CROSS_SECTION
+  MANIFOLD_IO
   MANIFOLD_EXPORT
   TRACY_ENABLE
   TRACY_MEMORY_USAGE
