--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,7 +128,7 @@
     "-DMANIFOLD_PYBIND=ON",
     "-DMANIFOLD_EXPORT=ON",
     "-DMANIFOLD_DEBUG=ON",
-    "-DMANIFOLD_ASSERT=OFF",
+    "-DMANIFOLD_ASSERT=ON",
     "-DMANIFOLD_PAR=ON",
     "-DCODE_COVERAGE=OFF",
     "-DCMAKE_CXX_FLAGS=''" //'-fsanitize=address,undefined'"
