--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -76,6 +76,7 @@ target_compile_features(manifold PUBLIC cxx_std_17)
 set(
   OPTIONS
   MANIFOLD_DEBUG
+  MANIFOLD_ASSERT
   MANIFOLD_CROSS_SECTION
   MANIFOLD_EXPORT
   TRACY_ENABLE
