avoid excess precision as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,7 +188,7 @@ else()
     # disable fp math optimizations, e.g. FMA for supported architectures, as
     # this changes floating-point results
     # clang defaults to -ffp-contract=off so we don't have to set that
-    list(APPEND MANIFOLD_FLAGS -ffp-contract=off)
+    list(APPEND MANIFOLD_FLAGS -ffp-contract=off -fexcess-precision=standard)
   endif()
   if(CODE_COVERAGE)
     list(
