--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -42,6 +42,8 @@ jobs:
         python -m pip install -U trimesh pytest
     - uses: actions/checkout@v4
     - uses: jwlawson/actions-setup-cmake@v2
+      with:
+        cmake-version: 4.0.2
     - name: Build ${{matrix.parallelization}}
       if: matrix.parallelization != 'OFF'
       run: |
@@ -153,6 +155,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: jwlawson/actions-setup-cmake@v2
+      with:
+        cmake-version: 4.0.2
     - uses: ilammy/msvc-dev-cmd@v1
     - name: Build ${{matrix.parallelization}}
       shell: powershell
@@ -221,7 +225,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: jwlawson/actions-setup-cmake@v2
       with:
-        cmake-version: 3.31.6
+        cmake-version: 4.0.2
     - name: Build
       run: |
         mkdir build
@@ -251,7 +255,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: jwlawson/actions-setup-cmake@v2
       with:
-        cmake-version: 3.31.6
+        cmake-version: 4.0.2
     - name: Build
       run: |
         mkdir build
@@ -280,7 +284,7 @@ jobs:
         pip install trimesh pytest
     - uses: actions/checkout@v4
       with:
-        cmake-version: 3.31.6
+        cmake-version: 4.0.2
     - uses: jwlawson/actions-setup-cmake@v2
     - name: test cmake consumer
       run: |
