--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Created by https://www.gitignore.io/api/osx,c++,cuda,linux,cmake
 # Edit at https://www.gitignore.io/?templates=osx,c++,cuda,linux,cmake
 
+data
+cmake
+include
+
+manifold.pc
+manifoldConfig.cmake
+DartConfiguration.tcl
+
 ### C++ ###
 # Prerequisites
 *.d
