--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Add an executable
 add_executable(FilletMain main.cpp)
 
-target_link_libraries(FilletMain private manifold)
+target_link_libraries(FilletMain manifold)
