--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,13 @@
     {
       "name": "manifold test",
       "type": "cppdbg",
-      "MIMode": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/build/test/manifold_test",
+      "program": "${workspaceFolder}/build/project/FilletMain",
       "args": [
         "--gtest_catch_exceptions=0",
         "--gtest_filter=Properties.ToleranceSphere"
       ],
-      "stopAtEntry": false,
+      "stopAtEntry": true,
       "cwd": "${workspaceFolder}/build/test",
       "environment": [
         {
