--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -28,8 +28,7 @@ if(MANIFOLD_PYBIND_STUBGEN)
 
   add_custom_command(
     TARGET manifold3d_stub POST_BUILD
-    COMMAND
-    python "${CMAKE_CURRENT_SOURCE_DIR}/stub_postprocess.py" "$<TARGET_FILE_DIR:manifold3d>/manifold3d.pyi"
+    COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/stub_postprocess.py" "$<TARGET_FILE_DIR:manifold3d>/manifold3d.pyi"
     VERBATIM
   )
 endif()
