--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -27,8 +27,11 @@ if(MANIFOLD_PYBIND_STUBGEN)
   )
 
   add_custom_command(
-    TARGET manifold3d_stub POST_BUILD
-    COMMAND python "${CMAKE_CURRENT_SOURCE_DIR}/stub_postprocess.py" "$<TARGET_FILE_DIR:manifold3d>/manifold3d.pyi"
+    TARGET manifold3d_stub
+    POST_BUILD
+    COMMAND
+      python "${CMAKE_CURRENT_SOURCE_DIR}/stub_postprocess.py"
+      "$<TARGET_FILE_DIR:manifold3d>/manifold3d.pyi"
     VERBATIM
   )
 endif()
