fix pyi vert_properties type (#1291)
* fix

* update doc

* fix pylance

* python postbuild

* fmt

* fmt

* update workflows to windows-2025 since windows-2019 deprecated

* fin

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -25,6 +25,15 @@ if(MANIFOLD_PYBIND_STUBGEN)
     DEPENDS manifold3d
     PATTERN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/stub_pattern.txt
   )
+
+  add_custom_command(
+    TARGET manifold3d_stub
+    POST_BUILD
+    COMMAND
+      python "${PROJECT_SOURCE_DIR}/bindings/python/stub_postbuild.py"
+      "$<TARGET_FILE_DIR:manifold3d>/manifold3d.pyi"
+    VERBATIM
+  )
 endif()
 
 target_link_libraries(manifold3d PRIVATE manifold)
