revert vscode preference

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,15 @@
   "configurations": [
     {
       "name": "manifold test",
-      "type": "cppdbg",
+      "type": "lldb-dap",
+      "MIMode": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/build/project/FilletMain",
+      "program": "${workspaceFolder}/build/test/manifold_test",
       "args": [
         "--gtest_catch_exceptions=0",
-        "--gtest_filter=Properties.ToleranceSphere"
+        "--gtest_filter=Manifold.Simplify"
       ],
-      "stopAtEntry": true,
+      "stopAtEntry": false,
       "cwd": "${workspaceFolder}/build/test",
       "environment": [
         {
