--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -176,8 +176,8 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DMANIFOLD_DEBUG=ON -DMANIFOLD_FUZZ=ON -DMANIFOLD_PYBIND=OFF -DCMAKE_CXX_COMPILER=clang++ ..
-        ASAN_OPTIONS=detect_container_overflow=0 make
+        cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DMANIFOLD_DEBUG=ON -DMANIFOLD_FUZZ=ON -DMANIFOLD_PYBIND=OFF -DCMAKE_CXX_COMPILER=clang++ -DMANIFOLD_PAR=OFF ..
+        make
 
   build_windows:
     name: Windows (TBB:${{matrix.parallelization}}, SHARED:${{matrix.shared}})
