--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,7 +185,15 @@ else()
     # disable fp math optimizations, e.g. FMA for supported architectures, as
     # this changes floating-point results
     # clang defaults to -ffp-contract=off so we don't have to set that
-    list(APPEND MANIFOLD_FLAGS -ffp-contract=off -fexcess-precision=standard)
+    include(CheckCXXCompilerFlag)
+    check_cxx_compiler_flag(-ffp-contract=off HAS_FP_CONTRACT)
+    check_cxx_compiler_flag(-fexcess-precision=standard HAS_FP_PRECISION)
+    if(HAS_FP_CONTRACT)
+      list(APPEND MANIFOLD_FLAGS -ffp-contract=off)
+    endif()
+    if(HAS_FP_PRECISION)
+      list(APPEND MANIFOLD_FLAGS -fexcess-precision=standard)
+    endif()
   endif()
   if(CODE_COVERAGE)
     list(
