Revert "add cmake check for fp related options"
This reverts commit 4045cf3653f9376c42e16b58adc61fd494afb11f.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,15 +185,7 @@ else()
     # disable fp math optimizations, e.g. FMA for supported architectures, as
     # this changes floating-point results
     # clang defaults to -ffp-contract=off so we don't have to set that
-    include(CheckCXXCompilerFlag)
-    check_cxx_compiler_flag(-ffp-contract=off HAS_FP_CONTRACT)
-    check_cxx_compiler_flag(-fexcess-precision=standard HAS_FP_PRECISION)
-    if(HAS_FP_CONTRACT)
-      list(APPEND MANIFOLD_FLAGS -ffp-contract=off)
-    endif()
-    if(HAS_FP_PRECISION)
-      list(APPEND MANIFOLD_FLAGS -fexcess-precision=standard)
-    endif()
+    list(APPEND MANIFOLD_FLAGS -ffp-contract=off -fexcess-precision=standard)
   endif()
   if(CODE_COVERAGE)
     list(
