fix stubgen path (#1301)
* add cmake check for fp related options

* fix

* update

* Revert "add cmake check for fp related options"

This reverts commit 4045cf3653f9376c42e16b58adc61fd494afb11f.

---------

Co-authored-by: pca006132 <john.lck40@gmail.com>

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -31,7 +31,7 @@ if(MANIFOLD_PYBIND_STUBGEN)
     POST_BUILD
     COMMAND
       python "${PROJECT_SOURCE_DIR}/bindings/python/stub_postbuild.py"
-      "$<TARGET_FILE_DIR:manifold3d>/manifold3d.pyi"
+      "${CMAKE_CURRENT_BINARY_DIR}/manifold3d.pyi"
     VERBATIM
   )
 endif()
