add MANIFOLD_FOUND cmake variable

--- a/cmake/manifoldConfig.cmake.in
+++ b/cmake/manifoldConfig.cmake.in
@@ -11,6 +11,8 @@ if(_FIND_ROOT STREQUAL "/")
   set(_FIND_ROOT "")
 endif()
 
+set(MANIFOLD_FOUND TRUE)
+
 set(MANIFOLD_CROSS_SECTION "@MANIFOLD_CROSS_SECTION@")
 set(MANIFOLD_USE_BUILTIN_CLIPPER2 "@MANIFOLD_USE_BUILTIN_CLIPPER2@")
 if(MANIFOLD_CROSS_SECTION AND NOT MANIFOLD_USE_BUILTIN_CLIPPER2)
