--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "program": "${workspaceFolder}/build/test/manifold_test",
       "args": [
         "--gtest_catch_exceptions=0",
-        "--gtest_filter=Manifold.Simplify"
+        "--gtest_filter=BooleanComplex.Ring"
       ],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}/build/test",
