--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -23,7 +23,7 @@ jobs:
         cross_section: [ON]
         parallelization: [OFF, ON]
         os: [ubuntu-24.04]
-        gcc: [13, 14]
+        gcc: [11, 14]
         include:
           - cross_section: OFF
             parallelization: ON
@@ -55,7 +55,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DMANIFOLD_PYBIND=ON -DMANIFOLD_DEBUG=ON -DMANIFOLD_ASSERT=ON -DMANIFOLD_FLAGS=-UNDEBUG -DMANIFOLD_CROSS_SECTION=${{matrix.cross_section}} -DMANIFOLD_EXPORT=ON -DMANIFOLD_PAR=${{matrix.parallelization}} .. && make
+        cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DMANIFOLD_PYBIND=ON -DMANIFOLD_DEBUG=ON -DMANIFOLD_ASSERT=ON -DMANIFOLD_FLAGS=-UNDEBUG -DMANIFOLD_CROSS_SECTION=${{matrix.cross_section}} -DMANIFOLD_EXPORT=ON -DMANIFOLD_PAR=${{matrix.parallelization}} .. && make VERBOSE=1
     - name: Test ${{matrix.parallelization}}
       if: matrix.parallelization != 'OFF'
       run: |
