--- a/bindings/wasm/examples/package.json
+++ b/bindings/wasm/examples/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && vite build",
+    "build": "npm run build:vite && npm run build:transpile",
+    "build:vite": "tsc --noEmit && vite build",
+    "build:transpile": "npx tsc -p lib --outDir built/lib",
     "build:watch": "vite build --watch",
     "preview": "vite preview",
     "test": "vitest run",
@@ -18,6 +20,7 @@
     "@gltf-transform/functions": "^3.8.0",
     "@jscadui/3mf-export": "^0.5.0",
     "@types/three": "^0.164.0",
+    "commander": "^13.1.0",
     "fflate": "^0.8.0",
     "gl-matrix": "^3.4.3",
     "simple-dropzone": "0.8.3",
@@ -26,7 +29,7 @@
   "devDependencies": {
     "@types/node": "^22.10.2",
     "@vitest/ui": "^1.6.0",
-    "typescript": "5.2.2",
+    "typescript": "^5.7.0",
     "vite": "^4.5.0",
     "vitest": "^1.6.0"
   }
