--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "docs": "npx typedoc",
-    "build": "tsc -p lib",
+    "build": "tsc",
     "prepare": "npm run build"
   },
   "files": [
