Refactor WASM state and export. (#1351)
* Isolated GLTF code without manifold dependencies.

* Split ManifoldCAD state.

* Clean up after code review.

* Renamed scene builder.

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -18,14 +18,25 @@
     "manifold-encapsulated-types.d.ts",
     "manifold-global-types.d.ts",
     "bin/manifold-cad",
+    "lib/animation.d.ts",
+    "lib/animation.js",
+    "lib/debug.d.ts",
+    "lib/debug.js",
     "lib/evaluate.d.ts",
     "lib/evaluate.js",
-    "lib/export.d.ts",
-    "lib/export.js",
+    "lib/scene-builder.d.ts",
+    "lib/scene-builder.js",
     "lib/gltf-io.d.ts",
     "lib/gltf-io.js",
+    "lib/3mf-export.d.ts",
+    "lib/export-3mf.d.ts",
+    "lib/export-3mf.js",
+    "lib/export-gltf.d.ts",
+    "lib/export-gltf.js",
     "lib/manifold-gltf.d.ts",
-    "lib/manifold-gltf.js"
+    "lib/manifold-gltf.js",
+    "lib/material.d.ts",
+    "lib/material.js"
   ],
   "typings": "manifold.d.ts",
   "types": "manifold.d.ts",
