Make evaluator asynchronous, and other small TS tweaks. (#1360)
* Make evaluator asynchronous

* Renamed euler2quat.ts to math.ts

* Better function names.  More documentation.

* Move glMatrix out of evaluator.

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -22,6 +22,8 @@
     "lib/animation.js",
     "lib/debug.d.ts",
     "lib/debug.js",
+    "lib/math.js",
+    "lib/math.d.ts",
     "lib/evaluate.d.ts",
     "lib/evaluate.js",
     "lib/scene-builder.d.ts",
