Add Debian packaging support
- Add debian/ directory with control, rules, and install files
- Update .gitignore to exclude Debian build artifacts
- Document Debian package build process in README
- Create changelog and copyright files for packaging

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,14 @@ CMakeSettings.json
 # Benchmark stl files
 extras/ember_tests/testfiles/raw_meshes
 
+# Debian packaging build artifacts
+obj-x86_64-linux-gnu/
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/files
+debian/manifold/
+debian/manifold-dev/
+debian/*.debhelper.log
+debian/*.substvars
+debian/tmp/
+
