--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -38,7 +38,9 @@
     "lib/manifold-gltf.d.ts",
     "lib/manifold-gltf.js",
     "lib/material.d.ts",
-    "lib/material.js"
+    "lib/material.js",
+    "lib/wasm.js",
+    "lib/wasm.d.ts"
   ],
   "typings": "manifold.d.ts",
   "types": "manifold.d.ts",
