Promote web worker out of examples.

--- a/.github/workflows/manifold.yml
+++ b/.github/workflows/manifold.yml
@@ -133,6 +133,12 @@ jobs:
       run: |
         cd build/test
         node ./manifold_test.js
+    - name: Test package
+      run: |
+        cd bindings/wasm
+        npm ci
+        npm run build
+        npm test
     - name: Test examples
       if: matrix.parallelization == 'OFF'
       run: |
