--- a/bindings/wasm/examples/package.json
+++ b/bindings/wasm/examples/package.json
@@ -29,6 +29,7 @@
     "@vitest/ui": "^3.2.4",
     "typescript": "^5.9.2",
     "vite": "^6.3.5",
+    "vite-plugin-static-copy": "^3.1.3",
     "vitest": "^3.2.4"
   }
 }
