--- a/bindings/wasm/examples/package.json
+++ b/bindings/wasm/examples/package.json
@@ -9,7 +9,7 @@
     "build:watch": "vite build --watch",
     "prebuild": "cd .. && npm run build",
     "preinstall": "cd .. && npm ci",
-    "preview": "vite preview",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.0",
@@ -25,6 +25,6 @@
     "@types/node": "^24.2.1",
     "typescript": "^5.9.2",
     "vite": "^6.3.5",
-    "vite-plugin-static-copy": "^3.1.3",
+    "vite-plugin-static-copy": "^3.1.3"
   }
 }
