--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -62,7 +62,7 @@
     ".": "./manifold.js",
     "./manifold.wasm": "./manifold.wasm",
     "./lib/*": "./lib/*",
-    "./manifoldCAD" : "./lib/manifoldCAD.js"
+    "./manifoldCAD": "./lib/manifoldCAD.js"
   },
   "typings": "manifold.d.ts",
   "types": "manifold.d.ts",
@@ -91,6 +91,7 @@
   },
   "homepage": "https://github.com/elalish/manifold#readme",
   "devDependencies": {
+    "@types/convert-source-map": "^2.0.3",
     "@types/node": "^24.2.1",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
@@ -102,11 +103,14 @@
     "@gltf-transform/core": "^4.2.0",
     "@gltf-transform/extensions": "^4.2.0",
     "@gltf-transform/functions": "^4.2.0",
+    "@jridgewell/trace-mapping": "^0.3.31",
     "@jscadui/3mf-export": "^0.5.0",
     "commander": "^13.1.0",
+    "convert-source-map": "^2.0.0",
     "esbuild-plugin-text-replace": "^1.3.0",
     "esbuild-wasm": "^0.25.11",
     "fflate": "^0.8.0",
-    "gl-matrix": "^3.4.3"
+    "gl-matrix": "^3.4.3",
+    "stacktrace-parser": "^0.1.11"
   }
 }
