Massive refactor! WIP so PR comments not fully addressed (yet).
  * Evaluator is gone.  Most of it is in `garbage-collector` and `worker`.
  * Models now have to `export default` rather than set `result`.
  * Examples have been updated accordingly, and moved to `test/examples`.

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -33,8 +33,8 @@
     "lib/debug.js",
     "lib/math.js",
     "lib/math.d.ts",
-    "lib/evaluate.d.ts",
-    "lib/evaluate.js",
+    "lib/error.d.ts",
+    "lib/error.js",
     "lib/scene-builder.d.ts",
     "lib/scene-builder.js",
     "lib/gltf-io.d.ts",
@@ -44,6 +44,8 @@
     "lib/export-3mf.js",
     "lib/export-gltf.d.ts",
     "lib/export-gltf.js",
+    "lib/garbage-collector.js",
+    "lib/garbage-collector.d.ts",
     "lib/manifold-gltf.d.ts",
     "lib/manifold-gltf.js",
     "lib/material.d.ts",
