bundle -> bundler in package.json

--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -26,8 +26,8 @@
     "bin/manifold-cad",
     "lib/animation.d.ts",
     "lib/animation.js",
-    "lib/bundle.js",
-    "lib/bundle.d.ts",
+    "lib/bundler.js",
+    "lib/bundler.d.ts",
     "lib/debug.d.ts",
     "lib/debug.js",
     "lib/math.js",
