--- a/bindings/wasm/examples/package.json
+++ b/bindings/wasm/examples/package.json
@@ -9,10 +9,7 @@
     "build:watch": "vite build --watch",
     "prebuild": "cd .. && npm run build",
     "preinstall": "cd .. && npm ci",
-    "preview": "vite preview",
-    "test": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:dev": "vitest"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.0",
@@ -20,16 +17,14 @@
     "@gltf-transform/functions": "^4.2.0",
     "@jscadui/3mf-export": "^0.5.0",
     "@types/three": "^0.179.0",
-    "gl-matrix": "^3.4.4",
+    "esbuild-wasm": "^0.25.11",
     "simple-dropzone": "0.8.3",
     "three": "0.179.1"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
-    "@vitest/ui": "^3.2.4",
     "typescript": "^5.9.2",
     "vite": "^6.3.5",
-    "vite-plugin-static-copy": "^3.1.3",
-    "vitest": "^3.2.4"
+    "vite-plugin-static-copy": "^3.1.3"
   }
 }
