--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -7,12 +7,15 @@
     "manifold-cad": "./bin/manifold-cad"
   },
   "scripts": {
+    "build": "tsc && node ./esbuild.mjs",
+    "clean": "tsc --build --clean",
+    "format": "cd ../.. && ./scripts/format.sh",
     "docs": "npx typedoc",
-    "build": "tsc",
-    "prepare": "npm run build",
     "test": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:dev": "vitest"
+    "test:ui": "vitest --coverage --ui",
+    "test:dev": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "prepare": "npm run build"
   },
   "files": [
     "manifold.js",
@@ -23,12 +26,14 @@
     "bin/manifold-cad",
     "lib/animation.d.ts",
     "lib/animation.js",
+    "lib/bundler.js",
+    "lib/bundler.d.ts",
     "lib/debug.d.ts",
     "lib/debug.js",
     "lib/math.js",
     "lib/math.d.ts",
-    "lib/evaluate.d.ts",
-    "lib/evaluate.js",
+    "lib/error.d.ts",
+    "lib/error.js",
     "lib/scene-builder.d.ts",
     "lib/scene-builder.js",
     "lib/gltf-io.d.ts",
@@ -38,6 +43,8 @@
     "lib/export-3mf.js",
     "lib/export-gltf.d.ts",
     "lib/export-gltf.js",
+    "lib/garbage-collector.js",
+    "lib/garbage-collector.d.ts",
     "lib/manifold-gltf.d.ts",
     "lib/manifold-gltf.js",
     "lib/material.d.ts",
@@ -48,8 +55,18 @@
     "lib/wasm.d.ts",
     "lib/worker.js",
     "lib/worker.d.ts",
-    "types/manifoldCAD.d.ts"
+    "lib/manifoldCAD.js",
+    "lib/manifoldCAD.d.ts",
+    "types/manifoldCAD.d.ts",
+    "dist/worker.bundled.js"
   ],
+  "exports": {
+    ".": "./manifold.js",
+    "./manifold.wasm": "./manifold.wasm",
+    "./lib/worker.bundled.js": "./dist/worker.bundled.js",
+    "./lib/*": "./lib/*",
+    "./manifoldCAD": "./lib/manifoldCAD.js"
+  },
   "typings": "manifold.d.ts",
   "types": "manifold.d.ts",
   "type": "module",
@@ -77,7 +94,11 @@
   },
   "homepage": "https://github.com/elalish/manifold#readme",
   "devDependencies": {
+    "@types/convert-source-map": "^2.0.3",
     "@types/node": "^24.2.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "esbuild": "^0.25.11",
     "typedoc": "^0.28.10",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
@@ -86,10 +107,13 @@
     "@gltf-transform/core": "^4.2.0",
     "@gltf-transform/extensions": "^4.2.0",
     "@gltf-transform/functions": "^4.2.0",
+    "@jridgewell/trace-mapping": "^0.3.31",
     "@jscadui/3mf-export": "^0.5.0",
     "commander": "^13.1.0",
-    "es-module-lexer": "^1.7.0",
+    "convert-source-map": "^2.0.0",
+    "esbuild-plugin-text-replace": "^1.3.0",
+    "esbuild-wasm": "^0.25.11",
     "fflate": "^0.8.0",
-    "gl-matrix": "^3.4.3"
+    "stacktrace-parser": "^0.1.11"
   }
 }
