--- a/bindings/wasm/package.json
+++ b/bindings/wasm/package.json
@@ -111,7 +111,8 @@
     "esbuild": "^0.25.11",
     "typedoc": "^0.28.10",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "stacktrace-parser": "^0.1.11"
   },
   "dependencies": {
     "@gltf-transform/core": "^4.2.0",
@@ -123,7 +124,6 @@
     "convert-source-map": "^2.0.0",
     "esbuild-plugin-text-replace": "^1.3.0",
     "esbuild-wasm": "^0.25.11",
-    "fflate": "^0.8.0",
-    "stacktrace-parser": "^0.1.11"
+    "fflate": "^0.8.0"
   }
 }
